--- a/html assignments.html
+++ b/html assignments.html
@@ -41,7 +41,7 @@ hspace="70"
 </td>
 <td></td>
 </tr>
-</taspacing="25" bgcolor="black" width="80%">
+</table cellspacing="25" bgcolor="black" width="80%">
 <tr>
 <td align="center">
 <img
