--- a/html assignments.html
+++ b/html assignments.html
@@ -11,8 +11,7 @@
 src="images/mani.png"
 alt="user image icon"
 width="120"
-hspace="70"
-/>
+hspace="70"/>
 </td>
 <td align="right" valign="top">
 <h1>S.Saravanan</h1>
@@ -41,7 +40,7 @@ hspace="70"
 </td>
 <td></td>
 </tr>
-</table cellspacing="25" bgcolor="black" width="80%">
+<table cellspacing="25" bgcolor="black" width="80%">
 <tr>
 <td align="center">
 <img
